--- a/src/app/modules/change-password/change-password.component.html
+++ b/src/app/modules/change-password/change-password.component.html
@@ -4,7 +4,7 @@
         <h3 class="ion-padding-bottom">Change Password</h3>
         <form [formGroup]="changePass" *ngIf="showForm">
             <div class="fullBox">
-                <ion-input label="Password" label-placement="floating" fill="outline" type="text"
+                <ion-input mode="md" label="Password" label-placement="floating" fill="outline" type="text"
                     placeholder="Enter New Password" formControlName="password"></ion-input>
             </div>
 
