--- a/src/app/modules/withdraw-dialog/withdraw-dialog.component.html
+++ b/src/app/modules/withdraw-dialog/withdraw-dialog.component.html
@@ -8,8 +8,8 @@
                     : '1.2-2'}}
                 </h6>
 
-                <ion-input label="{{data.type}} Amount" label-placement="floating" fill="outline" type="number"
-                    placeholder="Enter Amount" formControlName="withdraw_amount"></ion-input>
+                <ion-input mode="md" label="{{data.type}} Amount" label-placement="floating" fill="outline"
+                    type="number" placeholder="Enter Amount" formControlName="withdraw_amount"></ion-input>
             </div>
 
 
